# Alicia-M-ROS2

./: .gitignore  README.md
alicia_m_bringup/: CMakeLists.txt  package.xml
alicia_m_bringup/config/: ros2_controllers.yaml
alicia_m_bringup/launch/: hardware.launch.py  moveit_hardware.launch.py  moveit_sim.launch.py
alicia_m_calibration/: CMakeLists.txt  package.xml
alicia_m_calibration/alicia_m_calibration/: __init__.py
alicia_m_calibration/config/: .gitkeep  hand_eye_calibration_result.yaml
alicia_m_calibration/launch/: hand_eye_calibration.launch.py  verify_calibration.launch.py
alicia_m_calibration/scripts/: aruco_detector.py  hand_eye_calibration.py
alicia_m_descriptions/: CMakeLists.txt  package.xml
alicia_m_descriptions/launch/: display.launch.py
alicia_m_descriptions/meshes/Alicia_M_v1_1/follower/: base_link.STL  link2.STL
alicia_m_descriptions/rviz/: display.rviz
alicia_m_descriptions/urdf/Alicia_M_v1_1/: Alicia_M_v1_1_follower.urdf
alicia_m_driver/: CMakeLists.txt  alicia_m_driver.xml  package.xml
alicia_m_driver/include/alicia_m_driver/: alicia_m_system.hpp  protocol.hpp  serial_port.hpp
alicia_m_driver/src/: alicia_m_system.cpp  protocol.cpp  serial_port.cpp
alicia_m_grasp_6d/scripts/: d405_execution.py  d405_foundationstereo.py  d405_graspgen.py  d405_ros_bridge.py  d405_sam2.py
alicia_m_grasp_6d/scripts/utils/: __init__.py  camera_utils.py  transform_utils.py
alicia_m_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
alicia_m_moveit_config/config/: alicia_m_v1_1_follower.ros2_control.xacro  alicia_m_v1_1_follower.srdf  alicia_m_v1_1_follower.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml  ros2_controllers.yaml
alicia_m_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
examples/: 01_moveit_pick_and_place.py
